wrzucenie modyfikacji na timefun

--- a/piaskownica.ipynb
+++ b/piaskownica.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7f2f8468-c96b-45e9-932f-fc1cd25365af",
    "metadata": {},
    "source": [
-    "### Dekorator do wyznaczania czasu trwania wywołania funkcji  \n"
+    "### Dekorator do wyznaczania czasu trwania wywołania funkcji  \n",
+    "https://towardsdatascience.com/12-python-decorators-to-take-your-code-to-the-next-level-a910a1ab3e99\n",
+    "https://towardsdatascience.com/10-fabulous-python-decorators-ab674a732871"
    ]
   },
   {
